force-app/main/default/objects/Scheduled_Message__c/Scheduled_Message__c.object-meta.xml
<CustomObject>
    <label>Scheduled Message</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduled Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>