force-app/main/default/objects/Scheduled_Message__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>