force-app/main/default/objects/Scheduled_Message__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Scheduled Messages</relationshipLabel>
    <relationshipName>Scheduled_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>