force-app/main/default/objects/Scheduled_Message__c/fields/Phone_Number_List__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Number List</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>