force-app/main/default/objects/Scheduled_Message__c/fields/Scheduled_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Job_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>