force-app/main/default/objects/Scheduled_Message__c/fields/Scheduled_Message__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>