force-app/main/default/objects/Scheduled_Message__c/fields/Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>